# espectacular

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  _typos.toml  book.toml  justfile  lefthook.yml  llm.txt
.beads/: issues.jsonl
.espectacular/: AGENTS.md  config.toml
.espectacular/adapters/: cargo-adapter-detects-via-cargo-toml.toml  cargo-adapter-normalizes-non-zero-exit-to-test-failing.toml  cargo-adapter-normalizes-zero-exit-to-pass.toml  custom-runner-emits-required-envelope-fields.toml  custom-runner-is-not-invoked-without-explicit-config.toml  custom-runner-non-zero-exit-without-valid-envelope-is-an-error-finding.toml  detection-source-is-reported.toml  empty-findings-array-with-zero-exit-is-a-pass.toml  envelope-failure-overrides-process-success.toml  environment-detection-is-third.toml  explicit-config-takes-precedence.toml  manifest-declaration-is-second.toml  manifest-signal-wins-for-the-matching-adapter.toml  missing-adapter-emits-missing-adapter-finding.toml  process-failure-overrides-envelope-success.toml  (+10 more)
.wai/: config.toml
docs/: book.toml
openspec/: project.md
schemas/: check-output.schema.json  custom-runner.schema.json
scripts/: update-homebrew.py  update-scoop.py
src/: archetypes.rs  archive.rs  check.rs  config.rs  contracts.rs  doctor.rs  explain.rs  fsutil.rs  init.rs  main.rs  openspec.rs  quality.rs  report.rs  runner.rs  scenario.rs  signals.rs  upgrade.rs
tests/: archive_cli.rs  check_cli.rs  doctor_cli.rs  explain_cli.rs  llm_docs.rs  scenario_cli.rs  signals_cli.rs  type_cli.rs  upgrade_cli.rs
(+185 files in other folders)
