[package]
name = "espectacular"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ah"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
jsonschema = "0.18"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
