[package]
name = "espectacular"
version = "0.3.0"
edition = "2021"
description = "Behavioral verification layer enforcing spec-test correspondence in AI-assisted development"
license = "Apache-2.0"
repository = "https://github.com/charly-vibes/espectacular"
keywords = ["specification", "verification", "testing", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ah"
path = "src/main.rs"

[[bin]]
name = "espectacular"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
jsonschema = "0.18"
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
